feat: Localization synchronization.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,9 +10,9 @@
     "asset-mani.delPerm.confirm": "Are you sure?",
     "asset-mani.importDialogTitle": "Select assets you want to import.",
     "asset-mani.rename": "New name",
+    "assetPreview.renderingFallback": "Not available",
     "browser.folderTreeSectionTitle": "Folder Tree",
     "browser.tagCollSectionTitle": "Tag Collections",
-    "assetPreview.renderingFallback": "Not available",
     "ctxMenu.addTag": "Add Tag",
     "ctxMenu.del": "Delete",
     "ctxMenu.delPerm": "Permanently Delete",
@@ -23,41 +23,47 @@
     "ctxMenu.open": "Open",
     "ctxMenu.quickRef": "Quick Ref",
     "ctxMenu.recover": "Recover",
+    "ctxMenu.refresh": "Refresh",
     "ctxMenu.remTag": "Remove Tag",
     "ctxMenu.rename": "Rename",
+    "detail.aspect": "Aspect Ratio",
     "detail.created": "Created At",
     "detail.ext": "Extension",
     "detail.fileName": "File Name",
     "detail.filePropsSectionTitle": "File Properties",
     "detail.folderSelect": "Folder selected",
+    "detail.height": "Height",
     "detail.id": "Id",
+    "detail.max": "Boundary Maximum",
+    "detail.min": "Boundary Minimum",
     "detail.modify": "Last Modified",
     "detail.multiAssetsSelect": "Multiple assets selected",
     "detail.noAssetSelect": "No asset selected",
     "detail.size": "Size",
     "detail.src": "Source",
     "detail.tags": "Tags",
-    "detail.width": "Width",
-    "detail.height": "Height",
-    "detail.aspect": "Aspect Ratio",
-    "detail.min": "Boundary Minimum",
-    "detail.max": "Boundary Maximum",
-    "detail.vertices": "Vertices",
     "detail.triangles": "Triangles",
+    "detail.vertices": "Vertices",
+    "detail.width": "Width",
     "quickRefCtxMenu.close": "Close",
+    "quickRefCtxMenu.screenshot": "Screenshot",
     "recycleBin.title": "Recycle Bin",
+    "settings.about": "About",
+    "settings.about.repo": "Repository",
+    "settings.about.updateCheck": "Check for Update",
+    "settings.about.ver": "Version",
     "settings.experimental": "Experimental",
     "settings.experimental.aigcDetect": "AIGC Detection",
     "settings.general": "General",
+    "settings.general.dbClick": "Double Click Behavior",
+    "settings.general.dbClick.open": "Open File",
+    "settings.general.dbClick.ref": "Quick Ref",
     "settings.general.lng": "Language",
     "settings.general.lng.en": "English",
     "settings.general.lng.zh": "简体中文",
     "settings.general.theme": "Theme",
     "settings.general.theme.dark": "Dark",
     "settings.general.theme.light": "Light",
-    "settings.general.dbClick": "Double Click Behavior",
-    "settings.general.dbClick.open": "Open File",
-    "settings.general.dbClick.ref": "Quick Ref",
     "settings.keyMapping": "Key Mapping",
     "settings.keyMapping.delete": "Delete",
     "settings.keyMapping.listening": "Listening",
@@ -70,10 +76,6 @@
     "settings.library.statistics": "Statistics",
     "settings.modelRendering": "Model Rendering",
     "settings.modelRendering.fps": "Frame Rate",
-    "settings.about": "About",
-    "settings.about.updateCheck": "Check for Update",
-    "settings.about.repo": "Repository",
-    "settings.about.ver": "Version",
     "settings.title": "Settings",
     "startup.btnInitLib": "Initialize Library",
     "startup.btnOpenLib": "Open Library",
@@ -103,12 +105,10 @@
     "toast.invalidKeyComb.body": "The combination should contain at least one key other than control, alt or shift.",
     "toast.invalidKeyComb.title": "Invalid key combination.",
     "toast.save.success": "Saved library.",
+    "toast.screenshot.success": "Successfully took screenshot. You may need to refresh the parent folder to see it.",
     "toast.success.title": "Success",
     "update.body": "You are now using {{current}}, while the latest is {{latest}}",
     "update.body.already": "You are using the latest version of Snowflake! 🥳",
     "update.title": "Update Available",
-    "update.title.already": "You are up to date",
-    "quickRefCtxMenu.screenshot": "Screenshot",
-    "toast.screenshot.success": "Successfully took screenshot. You may need to refresh the parent folder to see it.",
-    "ctxMenu.refresh": "Refresh"
+    "update.title.already": "You are up to date"
 }
