--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -10,6 +10,7 @@
     "asset-mani.delPerm.confirm": "你确定吗？",
     "asset-mani.importDialogTitle": "选择你需要导入的资产",
     "asset-mani.rename": "新名字",
+    "assetPreview.renderingFallback": "不可用",
     "browser.folderTreeSectionTitle": "目录树",
     "browser.tagCollSectionTitle": "标签合集",
     "ctxMenu.addTag": "添加标签",
@@ -19,28 +20,44 @@
     "ctxMenu.moveTo": "移动至",
     "ctxMenu.noFolderFallback": "没有符合的文件夹",
     "ctxMenu.noTagFallback": "没有符合的标签",
-    "ctxMenu.open": "Open",
+    "ctxMenu.open": "打开",
     "ctxMenu.quickRef": "快速参考",
     "ctxMenu.recover": "恢复",
+    "ctxMenu.refresh": "刷新",
     "ctxMenu.remTag": "移除标签",
     "ctxMenu.rename": "重命名",
+    "detail.aspect": "宽高比",
     "detail.created": "创建于",
     "detail.ext": "扩展名",
     "detail.fileName": "文件名",
     "detail.filePropsSectionTitle": "文件属性",
     "detail.folderSelect": "选中文件夹",
+    "detail.height": "Height",
     "detail.id": "唯一标识符",
+    "detail.max": "边界最小值",
+    "detail.min": "边界最大值",
     "detail.modify": "上一次修改于",
     "detail.multiAssetsSelect": "多个被选中的资产",
     "detail.noAssetSelect": "没有选中的资产",
     "detail.size": "大小",
     "detail.src": "源",
     "detail.tags": "标签",
+    "detail.triangles": "三角形数量",
+    "detail.vertices": "顶点数量",
+    "detail.width": "Width",
     "quickRefCtxMenu.close": "关闭",
+    "quickRefCtxMenu.screenshot": "截图",
     "recycleBin.title": "回收站",
+    "settings.about": "关于",
+    "settings.about.repo": "仓库",
+    "settings.about.updateCheck": "检查更新",
+    "settings.about.ver": "版本",
     "settings.experimental": "实验性",
     "settings.experimental.aigcDetect": "AI生成内容检测",
     "settings.general": "通用",
+    "settings.general.dbClick": "双击行为",
+    "settings.general.dbClick.open": "打开文件",
+    "settings.general.dbClick.ref": "快速参考",
     "settings.general.lng": "语言",
     "settings.general.lng.en": "English",
     "settings.general.lng.zh": "简体中文",
@@ -57,7 +74,8 @@
     "settings.library.export": "导出库",
     "settings.library.name": "名字",
     "settings.library.statistics": "统计数据",
-    "settings.library.void": "没有被加载的库",
+    "settings.modelRendering": "模型渲染",
+    "settings.modelRendering.fps": "帧率",
     "settings.title": "设置",
     "startup.btnInitLib": "初始化库",
     "startup.btnOpenLib": "打开库",
@@ -87,7 +105,10 @@
     "toast.invalidKeyComb.body": "组合中至少应该存在一个不是 Ctrl, Shift 或者 Alt 的按键",
     "toast.invalidKeyComb.title": "无效的按键组合",
     "toast.save.success": "已保存",
+    "toast.screenshot.success": "截图成功，你需要刷新一下才能看到他",
     "toast.success.title": "成功",
     "update.body": "你正在使用 {{current}}, 最新版本是 {{latest}}",
-    "update.title": "有可用的更新"
+    "update.body.already": "你正在使用最新版本的 Snowflake! 🥳",
+    "update.title": "有可用的更新",
+    "update.title.already": "已是最新版"
 }
