feat: Color tags in context menus.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,7 +13,9 @@
     "assetPreview.renderingFallback": "Not available",
     "browser.folderTreeSectionTitle": "Folder Tree",
     "browser.tagCollSectionTitle": "Tag Collections",
-    "ctxMenu.addTag": "Add Tag",
+    "ctxMenu.modifyTags": "Modify Tags",
+    "ctxMenu.modifyTags.add": "Add",
+    "ctxMenu.modifyTags.remove": "Remove",
     "ctxMenu.del": "Delete",
     "ctxMenu.delPerm": "Permanently Delete",
     "ctxMenu.delPerm.confirm": "Are you sure?",
