fix: Regrouping tag causes tag loss when tag has an old group.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -59,8 +59,8 @@
     "settings.general": "General",
     "settings.general.tagGroupConflictResolve": "Tag Group Conflict Resolve",
     "settings.general.tagGroupConflictResolve.ignore": "Ignore",
-    "settings.general.tagGroupConflictResolve.override": "Override",
-    "settings.general.tagGroupConflictResolve.remove": "Remove",
+    "settings.general.tagGroupConflictResolve.override": "Keep Incoming",
+    "settings.general.tagGroupConflictResolve.remove": "Keep Original",
     "settings.general.dbClick": "Double Click Behavior",
     "settings.general.dbClick.open": "Open File",
     "settings.general.dbClick.ref": "Quick Ref",
