feat: Change window transparency.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -69,9 +69,16 @@
     "settings.general.lng": "Language",
     "settings.general.lng.en": "English",
     "settings.general.lng.zh": "简体中文",
-    "settings.general.theme": "Theme",
-    "settings.general.theme.dark": "Dark",
-    "settings.general.theme.light": "Light",
+    "settings.appearance": "Appearance",
+    "settings.appearance.transparency": "Window Transparency",
+    "settings.appearance.transparency.none": "None",
+    "settings.appearance.transparency.blur": "Blur",
+    "settings.appearance.transparency.acrylic": "Acrylic",
+    "settings.appearance.transparency.mica": "Mica",
+    "settings.appearance.transparency.vibrancy": "Vibrancy",
+    "settings.appearance.theme": "Theme",
+    "settings.appearance.theme.dark": "Dark",
+    "settings.appearance.theme.light": "Light",
     "settings.keyMapping": "Key Mapping",
     "settings.keyMapping.delete": "Delete",
     "settings.keyMapping.listening": "Listening",
