feat: Changing transparency color.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -75,7 +75,9 @@
     "settings.appearance.transparency.blur": "Blur",
     "settings.appearance.transparency.acrylic": "Acrylic",
     "settings.appearance.transparency.mica": "Mica",
+    "settings.appearance.transparency.tabbed": "Tabbed",
     "settings.appearance.transparency.vibrancy": "Vibrancy",
+    "settings.appearance.transparencyColor": "Transparency Color",
     "settings.appearance.theme": "Theme",
     "settings.appearance.theme.dark": "Dark",
     "settings.appearance.theme.light": "Light",
