feat: New tag picking ui.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -112,12 +112,13 @@
     "tagsContainer.add": "Add Tag",
     "tagsContainer.noAvailable": "No tags available.",
     "tagsContainer.none": "None",
+    "tagsContainer.ungrouped": "Ungrouped",
     "tagsMgr.add": "Add Tag",
     "tagsMgr.colActions": "Actions",
     "tagsMgr.colColor": "Color",
     "tagsMgr.colName": "Name",
     "tagsMgr.title": "Tags Management",
-    "toast.assetDuplication.title": "Duplicate images detected",
+    "toast.assetDuplication.title": "Duplicate assets detected",
     "toast.err.title": "Error",
     "toast.export.success": "Exported library.",
     "toast.invalidKeyComb.body": "The combination should contain at least one key other than control, alt or shift.",
