feat: Fallback collection and tag names.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -108,7 +108,8 @@
     "stat.props.totalAssets": "Total Assets",
     "stat.props.value": "Value",
     "stat.title": "Statistics",
-    "tagName.fallback": "Unnamed",
+    "tagName.unnamed": "Unnamed Tag",
+    "collectionName.unnamed": "Unnamed Collection",
     "tagsContainer.add": "Add Tag",
     "tagsContainer.noAvailable": "No tags available.",
     "tagsContainer.none": "None",
