feat: Better update checking.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -124,10 +124,12 @@
     "toast.save.success": "Saved library.",
     "toast.screenshot.success": "Successfully took screenshot. You may need to refresh the parent folder to see it.",
     "toast.success.title": "Success",
-    "update.body": "You are now using {{current}}, while the latest is {{latest}}",
-    "update.body.already": "You are using the latest version of Snowflake! 🥳",
-    "update.title": "Update Available",
-    "update.title.already": "You are up to date",
+    "toast.update.startUpdateCheck.title": "Checking for updates.",
+    "toast.update.startUpdateCheck.body": "Please wait...",
+    "toast.update.available.title": "Update Available",
+    "toast.update.available.body": "You are now using {{current}}, while the latest is {{latest}}",
+    "toast.update.already.body": "You are using the latest version of Snowflake! 🥳",
+    "toast.update.already.title": "You are up to date",
     "ctxMenu.createCollection": "Create Collection",
     "ctxMenu.createTag": "Create Tag",
     "collection.all": "All",
